test/testdata/variables/self_referential_definition_error_local.lox
var a = "global a";
_ = a;
{
  var a = "shadowed " + a; // error: a read in its own initialiser
  print a;
}
